# crius-swiss

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
crius_swiss/: __init__.py  adapter.py  cache.py  exceptions.py  validation.py
crius_swiss.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_adapter.py  test_integration.py
